--- a/lib/zcms_web/templates/page/login.html.eex
+++ b/lib/zcms_web/templates/page/login.html.eex
@@ -1,7 +1,3 @@
-<button id="btn-home-view" class="btn btn-primary btn-margin">
-    Home
-</button>
-
 <button id="btn-login" class="btn btn-primary btn-margin">
     Log In
 </button>
@@ -12,6 +8,7 @@
 
 <div id="home-view">
   <h4></h4>
+  <div id="login-result"></div>
 </div>
 
 <script src="https://cdn.auth0.com/js/auth0/9.5.1/auth0.min.js"></script>
@@ -25,25 +22,24 @@
       domain: 'jannes.eu.auth0.com',
       clientID: 'ERsPWL3VKrVGWmIZhQ30otK6h4hqv3jI',
       responseType: 'token id_token',
-      scope: 'openid https://zyccms.jannes.mingram.net',
+      scope: 'openid profile email',
       redirectUri: window.location.href
-    });
-
-    loginBtn.addEventListener('click', function(e) {
-      e.preventDefault();
-      webAuth.authorize();
     });
 
     var loginStatus = document.querySelector('#home-view h4');
     var loginBtn = document.getElementById('btn-login');
     var logoutBtn = document.getElementById('btn-logout');
+    var loginres = document.getElementById('login-result');
 
 
+    loginBtn.addEventListener('click', function(e) {
+      e.preventDefault();
+      webAuth.authorize();
+    });
     logoutBtn.addEventListener('click', logout);
 
     function handleAuthentication() {
      webAuth.parseHash(function(err, authResult) {
-       console.log("!", authResult, err);
        if (authResult && authResult.accessToken && authResult.idToken) {
          window.location.hash = '';
          localLogin(authResult);
@@ -73,6 +69,7 @@
      webAuth.checkSession({}, (err, authResult) => {
        if (authResult && authResult.accessToken && authResult.idToken) {
          localLogin(authResult);
+         loginres.innerHTML = "<pre>" + JSON.stringify(authResult, null, "  ") + "</pre>"
        } else if (err) {
          alert(
              'Could not get a new token '  + err.error + ':' + err.error_description + '.'
@@ -90,6 +87,7 @@
      accessToken = '';
      idToken = '';
      expiresAt = 0;
+     loginres.innerHTML = "Logged out successfully";
      displayButtons();
     }
 
