--- a/lib/zcms_web/templates/page/login.html.eex
+++ b/lib/zcms_web/templates/page/login.html.eex
@@ -7,13 +7,7 @@
 </button>
 
 <div id="home-view">
-  <h2>Important endpoints: </h2>
-  <div><ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-  </ul></div>
+  <div id="endpoints"></div>
   <h2>Current status:</h2>
   <b class="status"></b>
   <div id="login-result"></div>
@@ -38,6 +32,7 @@
     var loginBtn = document.getElementById('btn-login');
     var logoutBtn = document.getElementById('btn-logout');
     var loginres = document.getElementById('login-result');
+    var endpointdiv = document.getElementById('endpoints');
 
 
     loginBtn.addEventListener('click', function(e) {
@@ -70,6 +65,11 @@
      loginres.innerHTML = '<div><p>Use the following code (just paste it to the console) to make your requests authenticated in other tabs</p><p>To inspect the graphQL, I suggest using <a href="https://chrome.google.com/webstore/detail/chromeiql/fkkiamalmpiidkljmicmjfbieiclmeij">the graphiql Chrome extension</a></p></div>'
      loginres.innerHTML += "<pre>" + ostr + "</pre>";
      loginres.innerHTML += "<div>Full result:</div><pre>" + JSON.stringify(authResult, null, "  ") + "</pre>";
+
+     endpointdiv.innerHTML = "....fetching endpoints....";
+     fetch("/control/api", {}).then(i => i.json()).then(i => {
+        endpointdiv.innerHTML = "<h2>Important endpoints: </h2><div><pre>" + JSON.stringify(i, null, "  ") + "</pre></div>"
+     });
      // Set the time that the access token will expire at
      expiresAt = JSON.stringify(
        authResult.expiresIn * 1000 + new Date().getTime()
@@ -120,6 +120,7 @@
        logoutBtn.style.display = 'none';
        loginStatus.innerHTML =
          'You are not logged in! Please log in to continue.';
+       endpointdiv.innerHTML = "";
      }
     }
 
