--- a/lib/zcms_web/templates/layout/app.html.eex
+++ b/lib/zcms_web/templates/layout/app.html.eex
@@ -91,7 +91,7 @@
 
          if(endpointdiv)  endpointdiv.innerHTML = "....fetching endpoints....";
          fetch("/control/api", {}).then(i => i.json()).then(i => {
-            if(endpointdiv)  endpointdiv.innerHTML = "<h2>Important endpoints: </h2><div><pre>" + JSON.stringify(i, null, "  ") + "</pre></div>"
+            if(endpointdiv)  endpointdiv.innerHTML = "<h2>Endpoints: </h2><div><pre>" + JSON.stringify(i, null, "  ") + "</pre></div>"
          });
          // Set the time that the access token will expire at
          expiresAt = JSON.stringify(
@@ -143,7 +143,7 @@
            logoutBtn.style.display = 'none';
            loginStatus.innerHTML =
              'You are not logged in! Please log in to continue.';
-           endpointdiv.innerHTML = "";
+           if(endpointdiv) endpointdiv.innerHTML = "";
          }
         }
 
