--- a/lib/zcms_web/templates/page/swaggerui.html.eex
+++ b/lib/zcms_web/templates/page/swaggerui.html.eex
@@ -1,14 +1,22 @@
 <div style="display: 100vw; height: 80wh" id="swagger-ui" ></div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/3.20.6/swagger-ui-bundle.js"></script>
-<script>
-  const ui = SwaggerUIBundle({
+<script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/3.20.6/swagger-ui-standalone-preset.js"></script>
+  <script>
+  window.onload = function() {
+    const ui = SwaggerUIBundle({
       url: "/control/api",
       dom_id: '#swagger-ui',
+      deepLinking: true,
       presets: [
         SwaggerUIBundle.presets.apis,
         SwaggerUIBundle.SwaggerUIStandalonePreset
       ],
+      plugins: [
+        SwaggerUIBundle.plugins.DownloadUrl
+      ],
       layout: "StandaloneLayout"
     });
+    window.ui = ui;
+  }
 </script>
 <link type="text/css" rel="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/3.20.6/swagger-ui.css" />
