--- a/lib/zcms_web/templates/page/swaggerui.html.eex
+++ b/lib/zcms_web/templates/page/swaggerui.html.eex
@@ -3,20 +3,22 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/3.20.6/swagger-ui-standalone-preset.js"></script>
   <script>
   window.onload = function() {
-    const ui = SwaggerUIBundle({
-      url: "/control/api",
-      dom_id: '#swagger-ui',
-      deepLinking: true,
-      presets: [
-        SwaggerUIBundle.presets.apis,
-        SwaggerUIBundle.SwaggerUIStandalonePreset
-      ],
-      plugins: [
-        SwaggerUIBundle.plugins.DownloadUrl
-      ],
-      layout: "StandaloneLayout"
+    window.onLogin(function() {
+      const ui = SwaggerUIBundle({
+        url: "/control/api",
+        dom_id: '#swagger-ui',
+        deepLinking: true,
+        presets: [
+          SwaggerUIBundle.presets.apis,
+          SwaggerUIBundle.SwaggerUIStandalonePreset
+        ],
+        plugins: [
+          SwaggerUIBundle.plugins.DownloadUrl
+        ],
+        layout: "StandaloneLayout"
+      });
+      window.ui = ui;
     });
-    window.ui = ui;
   }
 </script>
 <link type="text/css" rel="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/3.20.6/swagger-ui.css" />
